--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "react-select": "^5.7.3",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-select": "^5.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
